--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -51,7 +51,9 @@
     "    '''\n",
     "    A simple function for performing min-max normalisation on a list of grey values extracted from ImageJ's 'Plot Profile' plugin. \n",
     "\n",
-    "    :params values: array or list of values to be min-max normalised. \n",
+    "    :param values: array or list of values to be min-max normalised.\n",
+    "    :return: the normalised values.\n",
+    "    \n",
     "    '''\n",
     "    return [(i - min(values))/(max(values)-min(values)) for i in values]\n",
     "\n",
@@ -59,8 +61,10 @@
     "    '''\n",
     "    Function intended to perform a linear interpolation to a pre-specified length, e.g., the largest length array present in set of samples.\n",
     "\n",
-    "    :params inp: list/array of values to be interpolated. \n",
-    "    :params fi: the fractional index \n",
+    "    :param inp: list/array of values to be interpolated. \n",
+    "    :param fi: the fractional index\n",
+    "    :return: the interpolated value\n",
+    "\n",
     "    '''\n",
     "    fi = min(fi, len(inp) - 1) # New addition, might delete.\n",
     "    i, f = int(fi//1), fi % 1\n",
@@ -71,14 +75,10 @@
     "    \"\"\"\n",
     "    Calculate the mean of the middle 20% of values in a list or array.\n",
     "\n",
-    "    Parameters:\n",
-    "    values (list or np.ndarray): The input values.\n",
+    "    :param values: list or array of values.\n",
+    "    :return mean: the mean of the middle 20% of values.\n",
+    "    :raises TypeError: if `values` is not a list or array.\n",
     "\n",
-    "    Returns:\n",
-    "    float: The mean of the middle 20% of values.\n",
-    "\n",
-    "    Raises:\n",
-    "    TypeError: If `values` is not a list or array.\n",
     "    \"\"\"\n",
     "    # Ensure that the input is a list or array\n",
     "    if not isinstance(values, (list, np.ndarray,pd.Series)):\n",
@@ -93,7 +93,7 @@
     "    end_index = int(0.6 * n)\n",
     "\n",
     "    # Get the middle 20% of values\n",
-    "    middle_values = values[start_index:end_index]\n",
+    "    middle_values = values[start_index:end_index] # keep in mind python indexing is exclusive of the last index.\n",
     "\n",
     "    # Calculate and return the mean of the middle values\n",
     "    return sum(middle_values) / len(middle_values)\n",
