Some updates to the commenting.

--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "def interpolate(inp,fi): \n",
     "    '''\n",
-    "    Function intended to perform a linear interpolation to a pre-specified length, e.g., the largest length array present in set of samples.\n",
+    "    Function to perform a linear interpolation to a pre-specified length, e.g., the largest length array present in set of samples.\n",
     "\n",
     "    :param inp: list/array of values to be interpolated. \n",
     "    :param fi: the fractional index\n",
@@ -102,15 +102,11 @@
     "    \"\"\"\n",
     "    Calculate the intervals that each value in a list, array, or Pandas Series belongs to, based on a list, array, or Pandas Series of markers.\n",
     "\n",
-    "    Parameters:\n",
-    "    data (list, np.ndarray, or pd.Series): The input data values.\n",
-    "    markers (list, np.ndarray, or pd.Series): The markers that define the intervals.\n",
+    "    :params data: list, array, or Pandas Series of data values.\n",
+    "    :params markers: list, array, or Pandas Series of markers that define the intervals.\n",
+    "    :return intervals: list of interval labels (strings), one for each value in `data`.\n",
+    "    :raises TypeError: if `data` or `markers` is not a list, array, or Pandas Series.\n",
     "\n",
-    "    Returns:\n",
-    "    list: A list of interval labels (strings), one for each value in `data`.\n",
-    "\n",
-    "    Raises:\n",
-    "    TypeError: If `data` or `markers` is not a list, array, or Pandas Series.\n",
     "    \"\"\"\n",
     "    # Ensure that the input is a list, array, or Pandas Series\n",
     "    if not isinstance(data, (list, np.ndarray, pd.Series)):\n",
@@ -147,15 +143,6 @@
     "            intervals.append('Interval 6')\n",
     "\n",
     "    return intervals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TODO"
    ]
   },
   {
