--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,25 +23,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Absolute path to the relevant directory\n",
-    "# PATH = 'path/to/data' # Local directory not provided. Could be any directory with the VGLUT2 data. \n",
-    "# os.chdir(PATH) # Change current wd to PATH"
+    "### Setting the directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Absolute path to the relevant directory\n",
+    "PATH = 'C:/Users/dylan/Documents/VGLUT2_check/' # To replicate, change to your own path or RDM path, if applicable.\n",
+    "os.chdir(PATH) # Change current wd to PATH"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Helper functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Helper functions \n",
     "def get_laminar_values(path):\n",
-    "    \n",
     "    df = pd.read_csv(path) # Loads CSV with ID, X, Y, Channel.\n",
     "    for i in df.groupby('ID'):\n",
     "        animal = df[1]\n",
@@ -146,6 +161,318 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load in raw data sheets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>AGE_PN</th>\n",
+       "      <th>STAGE</th>\n",
+       "      <th>AREA</th>\n",
+       "      <th>SIDE</th>\n",
+       "      <th>UNIQUE_ID</th>\n",
+       "      <th>SAMPLE_ID</th>\n",
+       "      <th>Distance_microns</th>\n",
+       "      <th>VGLUT2</th>\n",
+       "      <th>SATB2</th>\n",
+       "      <th>DAPI</th>\n",
+       "      <th>Experimenter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1182A</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>631.453</td>\n",
+       "      <td>874.802</td>\n",
+       "      <td>1107.635</td>\n",
+       "      <td>TB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1182A</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>0.454</td>\n",
+       "      <td>649.632</td>\n",
+       "      <td>893.142</td>\n",
+       "      <td>1110.610</td>\n",
+       "      <td>TB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1182A</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>0.908</td>\n",
+       "      <td>666.433</td>\n",
+       "      <td>913.247</td>\n",
+       "      <td>1115.590</td>\n",
+       "      <td>TB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1182A</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>1.362</td>\n",
+       "      <td>683.220</td>\n",
+       "      <td>932.810</td>\n",
+       "      <td>1129.680</td>\n",
+       "      <td>TB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1182A</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1182AP23S23SSLTB</td>\n",
+       "      <td>1182AP23S23SS</td>\n",
+       "      <td>1.816</td>\n",
+       "      <td>700.702</td>\n",
+       "      <td>951.333</td>\n",
+       "      <td>1149.838</td>\n",
+       "      <td>TB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID  AGE_PN  STAGE AREA SIDE         UNIQUE_ID      SAMPLE_ID  \\\n",
+       "0  1182A    23.0     23   SS    L  1182AP23S23SSLTB  1182AP23S23SS   \n",
+       "1  1182A    23.0     23   SS    L  1182AP23S23SSLTB  1182AP23S23SS   \n",
+       "2  1182A    23.0     23   SS    L  1182AP23S23SSLTB  1182AP23S23SS   \n",
+       "3  1182A    23.0     23   SS    L  1182AP23S23SSLTB  1182AP23S23SS   \n",
+       "4  1182A    23.0     23   SS    L  1182AP23S23SSLTB  1182AP23S23SS   \n",
+       "\n",
+       "   Distance_microns   VGLUT2    SATB2      DAPI Experimenter  \n",
+       "0             0.000  631.453  874.802  1107.635           TB  \n",
+       "1             0.454  649.632  893.142  1110.610           TB  \n",
+       "2             0.908  666.433  913.247  1115.590           TB  \n",
+       "3             1.362  683.220  932.810  1129.680           TB  \n",
+       "4             1.816  700.702  951.333  1149.838           TB  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grey_values = pd.read_excel(\"./endogenous_VGLUT2_datasheet.xlsx\",sheet_name=2) # reads in tab 3, includes all of Toby's sections and most of mine. \n",
+    "grey_values.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select stage and region for layer marker calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>AGE_PN</th>\n",
+       "      <th>STAGE</th>\n",
+       "      <th>AREA</th>\n",
+       "      <th>SIDE</th>\n",
+       "      <th>UNIQUE_ID</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1294a</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>R</td>\n",
+       "      <td>1294a23SSR</td>\n",
+       "      <td>350.395</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1294a</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>R</td>\n",
+       "      <td>1294a23SSR</td>\n",
+       "      <td>380.555</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1294a</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>R</td>\n",
+       "      <td>1294a23SSR</td>\n",
+       "      <td>409.726</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1294a</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>R</td>\n",
+       "      <td>1294a23SSR</td>\n",
+       "      <td>461.147</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1294a</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>R</td>\n",
+       "      <td>1294a23SSR</td>\n",
+       "      <td>475.980</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID  AGE_PN  STAGE AREA SIDE   UNIQUE_ID        Y  Position\n",
+       "0  1294a      21     23   SS    R  1294a23SSR  350.395         1\n",
+       "1  1294a      21     23   SS    R  1294a23SSR  380.555         2\n",
+       "2  1294a      21     23   SS    R  1294a23SSR  409.726         3\n",
+       "3  1294a      21     23   SS    R  1294a23SSR  461.147         4\n",
+       "4  1294a      21     23   SS    R  1294a23SSR  475.980         5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Layer positions are examined stage-by-stage.\n",
+    "layer_markers = pd.read_excel(\"./endogenous_VGLUT2_datasheet.xlsx\",sheet_name=1) # reloads the sheet (not super necessary), selects the 2nd tab.  \n",
+    "stage = 23.0 # identifies the stage of interest\n",
+    "subset_layer_markers = layer_markers[layer_markers['STAGE']==stage] # subset the layer markers to the stage of interest.\n",
+    "subset_layer_markers.head() # check that it worked."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.0, 0.111, 0.23, 0.48, 0.565, 0.71, 1.0],\n",
+       " [0.0, 0.125, 0.246, 0.46, 0.522, 0.626, 1.0],\n",
+       " [0.0, 0.084, 0.218, 0.36, 0.457, 0.575, 1.0],\n",
+       " [0.0, 0.097, 0.236, 0.407, 0.521, 0.638, 1.0]]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Normalises the layers to the range 0-1.\n",
+    "# Based on one bilateral representative sample from each stage (L and R values averaged).\n",
+    "normed_markers = []\n",
+    "for i in subset_layer_markers.groupby(\"UNIQUE_ID\"):\n",
+    "    df = i[1]\n",
+    "    layer_values = df['Y'].tolist()\n",
+    "    norm_layer_values = normalise_values(layer_values)\n",
+    "    norm_layer_values = [round(v,3) for v in norm_layer_values]\n",
+    "    normed_markers.append(norm_layer_values)\n",
+    "normed_markers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -169,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
