--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dylan\\anaconda3\\envs\\general\\lib\\site-packages\\outdated\\utils.py:14: OutdatedPackageWarning: The package outdated is out of date. Your version is 0.2.1, the latest is 0.2.2.\n",
+      "Set the environment variable OUTDATED_IGNORE=1 to disable these warnings.\n",
+      "  return warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Import relevant python packages.\n",
     "import pandas as pd # For working with Pandas dataframes.\n",
@@ -19,7 +29,7 @@
     "from matplotlib.pyplot import Line2D\n",
     "import pingouin as pg # For initial statistical comparisons.\n",
     "rc('font',**{'family':'sans-serif','sans-serif':['Helvetica']}) # Initial plot formatting. \n",
-    "mpl.rcParams['pdf.fonttype'] = 42"
+    "mpl.rcParams['pdf.fonttype'] = 42 # Initial plot formatting."
    ]
   },
   {
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +283,7 @@
        "4  1294a      21     23   SS    R  1294a23SSR  475.980         5"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -464,12 +474,13 @@
        "4             1.816  700.702  951.333  1149.838           TB  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# load in all grey values\n",
     "grey_values = pd.read_excel(\"./endogenous_VGLUT2_datasheet.xlsx\",sheet_name=2) # reads in tab 3, includes all of Toby's sections and most of mine. \n",
     "grey_values.head()"
    ]
@@ -484,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +734,7 @@
        "[8605 rows x 12 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,28 +940,26 @@
     }
    ],
    "source": [
-    "array_lens = []\n",
-    "for a in df_interpolation.groupby('UNIQUE_ID'):\n",
-    "    data = a[1]\n",
-    "    array_lens.append(len(data['VGLUT2']))\n",
+    "# Find the maximum cortical width in um by which all others will be adjusted (stage-by-stage).\n",
+    "array_lens = [] # Contains the lengths of each cortical width in um.\n",
+    "for a in df_interpolation.groupby('UNIQUE_ID'): # Iterate through each animal.\n",
+    "    data = a[1] # Contains the data for that animal.\n",
+    "    array_lens.append(len(data['VGLUT2'])) # Append the length of the cortical width in um for that animal.\n",
     "max_array_len = max(array_lens) # Contains the maximum cortical width in um by which all others will be adjusted.\n",
     "\n",
-    "# Now, move through the individual animals and interpolate to the max size.\n",
-    "\n",
-    "interpolated_dict = {'ID':[],'Sample_ID':[],'Area':[],'Distance':[],'norm_Distance':[],'VGLUT2':[]}\n",
-    "\n",
-    "for a in df_interpolation.groupby('UNIQUE_ID'):\n",
-    "    distance = 0\n",
-    "    name = a[0]\n",
-    "    data = a[1]\n",
-    "    samp_id = data['SAMPLE_ID'].values[0]\n",
-    "    area = data['AREA'].values[0]\n",
-    "    inp_vglut2 = data['VGLUT2'].values\n",
-    "    new_len = max_array_len\n",
-    "    delta_vglut2 = (len(inp_vglut2)-1) / (new_len-1)\n",
-    "\n",
-    "    for i in range(new_len):\n",
-    "        v_vglut2 = round(interpolate(inp_vglut2, i*delta_vglut2),3)\n",
+    "# Interpolate the cortical width in um to the maximum length.\n",
+    "interpolated_dict = {'ID':[],'Sample_ID':[],'Area':[],'Distance':[],'norm_Distance':[],'VGLUT2':[]} # To contain the interpolated data.\n",
+    "for a in df_interpolation.groupby('UNIQUE_ID'): # Iterate through each animal.\n",
+    "    distance = 0 # Reset the distance counter.\n",
+    "    name = a[0] # Contains the name of the animal.\n",
+    "    data = a[1] # Contains the data for that animal.\n",
+    "    samp_id = data['SAMPLE_ID'].values[0] # Contains the sample ID.\n",
+    "    area = data['AREA'].values[0] # Contains the area (i.e., SS or VIS).\n",
+    "    inp_vglut2 = data['VGLUT2'].values # Contains the VGLUT2 values.\n",
+    "    new_len = max_array_len # Contains the maximum cortical width in um by which all others will be adjusted.\n",
+    "    delta_vglut2 = (len(inp_vglut2)-1) / (new_len-1) # Contains the delta for the interpolation.\n",
+    "    for i in range(new_len): # Iterate through the new length.\n",
+    "        v_vglut2 = round(interpolate(inp_vglut2, i*delta_vglut2),3) # Interpolate the VGLUT2 values.\n",
     "        interpolated_dict['VGLUT2'].append(v_vglut2)\n",
     "        interpolated_dict['ID'].append(name)\n",
     "        interpolated_dict['Area'].append(area)\n",
@@ -961,9 +970,7 @@
     "    # norm_v_vglut2 = normalise_values(interpolated_dict['VGLUT2'])\n",
     "    interpolated_dict.update({'norm_Distance': norm_distance})\n",
     "    # interpolated_dict.update({'norm_VGLUT2': norm_v_vglut2})\n",
-    "\n",
     "min_max = normalise_values(interpolated_dict['VGLUT2'])\n",
-    "\n",
     "interpolated_dict.update({'min-max_VGLUT2':min_max})\n",
     "interpolated_df = pd.DataFrame(interpolated_dict)\n",
     "interpolated_df"
