--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -86,7 +86,7 @@
     "    :return: the interpolated value\n",
     "\n",
     "    '''\n",
-    "    fi = min(fi, len(inp) - 1) # New addition, might delete.\n",
+    "    fi = min(fi, len(inp) - 1) # Ensure that the fractional index is not greater than the length of the array.\n",
     "    i, f = int(fi//1), fi % 1\n",
     "    j = i + 1 if f > 0 else i\n",
     "    return (1-f) * inp[i] + f * inp[j]\n",
@@ -952,23 +952,21 @@
     "    area = data['AREA'].values[0] # Contains the area (i.e., SS or VIS).\n",
     "    inp_vglut2 = data['VGLUT2'].values # Contains the VGLUT2 values.\n",
     "    new_len = max_array_len # Contains the maximum cortical width in um by which all others will be adjusted.\n",
-    "    delta_vglut2 = (len(inp_vglut2)-1) / (new_len-1) # Contains the delta for the interpolation.\n",
+    "    delta_vglut2 = (len(inp_vglut2)-1) / (new_len-1) # Contains the delta for the interpolation. This is essentially a scaling factor.\n",
     "    for i in range(new_len): # Iterate through the new length.\n",
     "        v_vglut2 = round(interpolate(inp_vglut2, i*delta_vglut2),3) # Interpolate the VGLUT2 values.\n",
-    "        interpolated_dict['VGLUT2'].append(v_vglut2)\n",
-    "        interpolated_dict['ID'].append(name)\n",
-    "        interpolated_dict['Area'].append(area)\n",
-    "        interpolated_dict['Distance'].append(distance)\n",
-    "        interpolated_dict['Sample_ID'].append(samp_id)\n",
-    "        distance += 1\n",
-    "    norm_distance = normalise_values(interpolated_dict['Distance'])\n",
-    "    # norm_v_vglut2 = normalise_values(interpolated_dict['VGLUT2'])\n",
-    "    interpolated_dict.update({'norm_Distance': norm_distance})\n",
-    "    # interpolated_dict.update({'norm_VGLUT2': norm_v_vglut2})\n",
-    "min_max = normalise_values(interpolated_dict['VGLUT2'])\n",
-    "interpolated_dict.update({'min-max_VGLUT2':min_max})\n",
-    "interpolated_df = pd.DataFrame(interpolated_dict)\n",
-    "interpolated_df"
+    "        interpolated_dict['VGLUT2'].append(v_vglut2) # Append the interpolated VGLUT2 values.\n",
+    "        interpolated_dict['ID'].append(name) # Append the animal ID.\n",
+    "        interpolated_dict['Area'].append(area) # Append the area.\n",
+    "        interpolated_dict['Distance'].append(distance) # Append the distance.\n",
+    "        interpolated_dict['Sample_ID'].append(samp_id) # Append the sample ID.\n",
+    "        distance += 1 # Increment the distance counter.\n",
+    "    norm_distance = normalise_values(interpolated_dict['Distance']) # Normalise the distance values.\n",
+    "    interpolated_dict.update({'norm_Distance': norm_distance}) # Update the dictionary with the normalised distance values.\n",
+    "min_max = normalise_values(interpolated_dict['VGLUT2']) # Normalise the VGLUT2 values.\n",
+    "interpolated_dict.update({'min-max_VGLUT2':min_max}) # Update the dictionary with the normalised VGLUT2 values.\n",
+    "interpolated_df = pd.DataFrame(interpolated_dict) # Convert the dictionary to a Pandas DataFrame.\n",
+    "interpolated_df # Check that it worked."
    ]
   },
   {
