--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -104,6 +104,7 @@
     "    if not isinstance(values, (list, np.ndarray,pd.Series)):\n",
     "        raise TypeError(\"Input must be a list, array, or pd.Series.\")\n",
     "    \n",
+    "    # Convert the input to a list if it is an array\n",
     "    if isinstance(values, pd.Series):\n",
     "        values = values.tolist()\n",
     "\n",
@@ -163,6 +164,50 @@
     "            intervals.append('Interval 6')\n",
     "\n",
     "    return intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cleaner implementation of the above function\n",
+    "def interpolate(inp, new_len):\n",
+    "    '''\n",
+    "    Function to perform a linear interpolation to a specified length.\n",
+    "\n",
+    "    :param inp: list/array of values to be interpolated.\n",
+    "    :param new_len: the final size of the interpolated array\n",
+    "    :return: the interpolated array\n",
+    "    '''\n",
+    "    # Calculate the scaling factor to map the original indices to the new indices\n",
+    "    scaling_factor = (len(inp) - 1) / (new_len - 1) # Needs to be -1 to account for python indexing.\n",
+    "\n",
+    "    # Create a new list to store the interpolated values\n",
+    "    interpolated_array = []\n",
+    "\n",
+    "    # Iterate through the new list and calculate the interpolated values\n",
+    "    for i in range(new_len):\n",
+    "        # Calculate the corresponding fractional index in the original list\n",
+    "        fractional_index = i * scaling_factor\n",
+    "\n",
+    "        # Limit the fractional index to be within the valid range of indices in the input list\n",
+    "        fractional_index = min(fractional_index, len(inp) - 1 - 1e-9)\n",
+    "\n",
+    "        # Break the fractional index into its integer part and fractional part\n",
+    "        integer_part, fractional_part = int(fractional_index // 1), fractional_index % 1\n",
+    "\n",
+    "        # Determine the next index in the input list\n",
+    "        next_index = integer_part + 1 if fractional_part > 0 else integer_part\n",
+    "\n",
+    "        # Calculate the interpolated value using a weighted average of the values at the integer part and next index\n",
+    "        interpolated_value = (1 - fractional_part) * inp[integer_part] + fractional_part * inp[next_index]\n",
+    "\n",
+    "        # Append the interpolated value to the new list\n",
+    "        interpolated_array.append(interpolated_value)\n",
+    "\n",
+    "    return interpolated_array"
    ]
   },
   {
