--- a/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
+++ b/Suarez-VGLUT2-2023/VGLUT2-analysis-notebook.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "4  1294a      21     23   SS    R  1294a23SSR  475.980         5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "4             1.816  700.702  951.333  1149.838           TB  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "[8605 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,12 +790,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interpolate dataframe"
+    "### Interpolate dataframe\n",
+    "Starts by finding the maximum cortical width within a stage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the maximum cortical width in um by which all others will be adjusted (stage-by-stage).\n",
+    "array_lens = [] # Contains the lengths of each cortical width in um.\n",
+    "for a in df_interpolation.groupby('UNIQUE_ID'): # Iterate through each animal.\n",
+    "    data = a[1] # Contains the data for that animal.\n",
+    "    array_lens.append(len(data['VGLUT2'])) # Append the length of the cortical width in um for that animal.\n",
+    "max_array_len = max(array_lens) # Contains the maximum cortical width in um by which all others will be adjusted."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now interpolate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -974,19 +997,45 @@
        "[11472 rows x 7 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Find the maximum cortical width in um by which all others will be adjusted (stage-by-stage).\n",
-    "array_lens = [] # Contains the lengths of each cortical width in um.\n",
+    "# Interpolate the cortical width in um to the maximum length.\n",
+    "interpolated_dict = {'ID':[],'Sample_ID':[],'Area':[],'Distance':[],'norm_Distance':[],'VGLUT2':[]} # To contain the interpolated data.\n",
     "for a in df_interpolation.groupby('UNIQUE_ID'): # Iterate through each animal.\n",
+    "    distance = 0 # Reset the distance counter.\n",
+    "    name = a[0] # Contains the name of the animal.\n",
     "    data = a[1] # Contains the data for that animal.\n",
-    "    array_lens.append(len(data['VGLUT2'])) # Append the length of the cortical width in um for that animal.\n",
-    "max_array_len = max(array_lens) # Contains the maximum cortical width in um by which all others will be adjusted.\n",
-    "\n",
+    "    samp_id = data['SAMPLE_ID'].values[0] # Contains the sample ID.\n",
+    "    area = data['AREA'].values[0] # Contains the area (i.e., SS or VIS).\n",
+    "    inp_vglut2 = data['VGLUT2'].values # Contains the VGLUT2 values.\n",
+    "    new_len = max_array_len # Contains the maximum cortical width in um by which all others will be adjusted.\n",
+    "    delta_vglut2 = (len(inp_vglut2)-1) / (new_len-1) # Contains the delta for the interpolation. This is essentially a scaling factor.\n",
+    "    for i in range(new_len): # Iterate through the new length.\n",
+    "        v_vglut2 = round(interpolate(inp_vglut2, i*delta_vglut2),3) # Interpolate the VGLUT2 values.\n",
+    "        interpolated_dict['VGLUT2'].append(v_vglut2) # Append the interpolated VGLUT2 values.\n",
+    "        interpolated_dict['ID'].append(name) # Append the animal ID.\n",
+    "        interpolated_dict['Area'].append(area) # Append the area.\n",
+    "        interpolated_dict['Distance'].append(distance) # Append the distance.\n",
+    "        interpolated_dict['Sample_ID'].append(samp_id) # Append the sample ID.\n",
+    "        distance += 1 # Increment the distance counter.\n",
+    "    norm_distance = normalise_values(interpolated_dict['Distance']) # Normalise the distance values.\n",
+    "    interpolated_dict.update({'norm_Distance': norm_distance}) # Update the dictionary with the normalised distance values.\n",
+    "min_max = normalise_values(interpolated_dict['VGLUT2']) # Normalise the VGLUT2 values.\n",
+    "interpolated_dict.update({'min-max_VGLUT2':min_max}) # Update the dictionary with the normalised VGLUT2 values.\n",
+    "interpolated_df = pd.DataFrame(interpolated_dict) # Convert the dictionary to a Pandas DataFrame.\n",
+    "interpolated_df # Check that it worked."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Interpolate the cortical width in um to the maximum length.\n",
     "interpolated_dict = {'ID':[],'Sample_ID':[],'Area':[],'Distance':[],'norm_Distance':[],'VGLUT2':[]} # To contain the interpolated data.\n",
     "for a in df_interpolation.groupby('UNIQUE_ID'): # Iterate through each animal.\n",
